--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
 </head>
 <body>
 
-    <h1>Паралельні обчислення: Каскадна сума</h1>
-    <p>Ви можете покрутити анімацію або натиснути кнопку AR, щоб побачити її на своєму столі.</p>
+    <h1>Parallel and distributed computing: Parallel scheme og adding</h1>
+    <p>You can spin the animation or press the AR button to see it on your desk.</p>
 
     <model-viewer src="cascade_sum.glb" 
                   ar 
                   camera-controls 
                   autoplay
                   ar-modes="webxr scene-viewer quick-look"
-                  alt="Анімація каскадного додавання масиву">
+                  alt="Array cascade addition animation">
                   
         <div slot="poster">
-            Завантаження 3D-моделі...
+            Model loading...
         </div>
     </model-viewer>
 
 </body>
+
 </html>
