--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <h1>Parallel and distributed computing: Parallel scheme og adding</h1>
+    <h1>Parallel and distributed computing: Parallel scheme of adding</h1>
     <p>You can spin the animation or press the AR button to see it on your desk.</p>
 
     <model-viewer src="cascade_sum.glb" 
@@ -37,3 +37,4 @@
 </body>
 
 </html>
+
