--- a/index.html
+++ b/index.html
@@ -9,10 +9,30 @@
     
     <style>
         body { font-family: sans-serif; text-align: center; margin: 0; padding: 0; }
+        /* Важливо: model-viewer займає весь екран */
         model-viewer {
             width: 100vw;
             height: 100vh;
             display: block; 
+        }
+        /* Спеціальні стилі для заголовків, щоб вони були ПОВЕРХ моделі */
+        h1, p {
+            position: absolute; /* Визначає точне місце розташування */
+            width: 90%; /* Обмежує ширину тексту */
+            left: 50%;
+            transform: translateX(-50%); /* Центрування */
+            color: black; 
+            background-color: rgba(255, 255, 255, 0.7); /* Напівпрозорий фон для видимості */
+            padding: 5px;
+            z-index: 1000; /* ГАРАНТІЯ: Текст буде поверх 3D-моделі */
+        }
+        h1 {
+            top: 10px;
+            font-size: 1.2em;
+        }
+        p {
+            top: 55px;
+            font-size: 0.9em;
         }
     </style>
 </head>
@@ -40,12 +60,12 @@
     <script>
         const modelViewer = document.querySelector('#ar-model');
 
-        // Гарантує запуск, коли модель завантажена
+        // Гарантує запуск анімації
         modelViewer.addEventListener('load', () => {
             modelViewer.play();
         });
 
-        // Гарантує запуск, коли AR-сесія починається
+        // Гарантує запуск анімації в AR-режимі
         modelViewer.addEventListener('ar-status', (event) => {
             if (event.detail.status === 'tracking') {
                 modelViewer.play();
