--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     
     <style>
         body { font-family: sans-serif; text-align: center; margin: 0; padding: 0; }
-        /* Важливо: model-viewer займає весь екран і відображає AR-кнопку */
+        /* Це важливо: дозволяє model-viewer займати весь екран і відображати AR-кнопку */
         model-viewer {
             width: 100vw;
             height: 100vh;
             display: block; 
         }
-        /* Спеціальні стилі для заголовків, щоб вони були ПОВЕРХ моделі */
+        /* Стилізація заголовків, щоб вони не перекривали AR-модель */
         h1, p {
-            position: absolute; /* Визначає точне місце розташування */
-            width: 90%; /* Обмежує ширину тексту */
+            position: absolute;
+            width: 90%; 
             left: 50%;
-            transform: translateX(-50%); /* Центрування */
+            transform: translateX(-50%); 
             color: black; 
-            background-color: rgba(255, 255, 255, 0.7); /* Напівпрозорий фон для видимості */
+            background-color: rgba(255, 255, 255, 0.7); 
             padding: 5px;
-            z-index: 1000; /* ГАРАНТІЯ: Текст буде поверх 3D-моделі */
+            z-index: 1000; 
             text-align: center;
         }
         h1 {
