--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     
     <style>
         body { font-family: sans-serif; text-align: center; margin: 0; padding: 0; }
-        /* Це важливо: дозволяє model-viewer займати весь екран і відображати AR-кнопку */
+        /* Важливо: model-viewer займає весь екран і відображає AR-кнопку */
         model-viewer {
             width: 100vw;
             height: 100vh;
             display: block; 
         }
-        /* Стилізація заголовків, щоб вони не перекривали AR-модель */
+        /* Спеціальні стилі для заголовків, щоб вони були ПОВЕРХ моделі */
         h1, p {
-            position: absolute;
-            width: 90%; 
+            position: absolute; /* Визначає точне місце розташування */
+            width: 90%; /* Обмежує ширину тексту */
             left: 50%;
-            transform: translateX(-50%); 
+            transform: translateX(-50%); /* Центрування */
             color: black; 
-            background-color: rgba(255, 255, 255, 0.7); 
+            background-color: rgba(255, 255, 255, 0.7); /* Напівпрозорий фон для видимості */
             padding: 5px;
-            z-index: 1000; 
+            z-index: 1000; /* ГАРАНТІЯ: Текст буде поверх 3D-моделі */
             text-align: center;
         }
         h1 {
@@ -51,7 +51,11 @@
         autoplay
         loop 
         animation-name="Scene"
-        alt="Array cascade addition animation">
+        alt="Array cascade addition animation"
+        exposure="1.0" 
+        shadow-intensity="1"
+        enable-legacy-ar
+    >
         
         <div slot="poster" style="background: #222; color: white;">
             Модель завантажується...
